packages/plugin-image/web/statics/styles/image-viewer.scss
$opacityTransition: opacity 0.8s ease;
.imageContainer {
  display: block;
  position: relative;
  overflow: hidden;
}

.expandIcon {
  height: 40px;
  width: 40px;
  position: absolute;
  top: 0;
  right: 0;
  z-index: 10;
  color: white;
  background-image: radial-gradient(
    circle,
    rgba(0, 0, 0, 0.3),
    rgba(0, 0, 0, 0.1),
    rgba(0, 0, 0, 0.01),
    transparent
  );

  path {
    opacity: 0.8;
  }
  &:hover path {
    opacity: 1;
  }

  display: none;
  .imageContainer:hover & {
    display: block;
  }
}

.pointer {
  cursor: pointer;
}

.imageWrapper {
  overflow: hidden; // &:before {
  //   content: " ";
  //   position: absolute;
  //   z-index: 0;
  //   top: 0;
  //   left: 0;
  //   width: 100%;
  //   height: 3px;
  //   background: #333;
  //   animation-name: image_loading;
  //   animation-duration: 2s;
  //   animation-iteration-count: infinite;
  //   animation-delay: 0s;
  //   animation-timing-function: linear;
  // }
}

.image {
  display: block;
  width: 100%;
}

.imageOverlay {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
}

.imageDescription {
}

.imageTitle {
}

.imageCaption {
  text-align: center;
  padding: 18px 0;
  background: none;
}

.imagePreload {
  position: relative;
  transition: $opacityTransition;
  filter: blur(8px);
}

.imageHighres {
  position: relative;
  
  &:not([src$=".gif"]) {
    z-index: 0;
    top: 0;
    left: 0;
    position: absolute;
    opacity: 0;
    transition: $opacityTransition;
  }
}

@keyframes image_loading {
  0% {
    width: 5%;
    left: -5%;
  }
  50% {
    width: 50%;
    left: 25%;
  }
  100% {
    width: 5%;
    left: 100%;
  }
}

